[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/Sprites/gui_gradient.png" type="Texture2D" id=1]
[ext_resource path="res://UI/Sprites/Cursor.png" type="Texture2D" id=2]
[ext_resource path="res://UI/Toriko.ttf" type="FontFile" id=3]
[ext_resource path="res://UI/FieldActionMenu.gd" type="Script" id=4]

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 160, 224, 64, 64 )

[sub_resource type="FontFile" id=13]
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=12]
resource_name = "Hover"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.5 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ 4.69024, 8 ]
}

[node name="ActionMenu" type="NinePatchRect"]
self_modulate = Color( 1, 1, 1, 0.498039 )
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -70.0
offset_right = 85.0
offset_bottom = -10.0
size_flags_horizontal = 3
texture = SubResource( 10 )
region_rect = Rect2( 0, 0, 64, 64 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 27.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -20.0

[node name="Command1" type="Label" parent="VBoxContainer"]
offset_right = 40.0
offset_bottom = 12.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 13 )
text = "Ability"
uppercase = true

[node name="Command2" type="Label" parent="VBoxContainer"]
offset_top = 16.0
offset_right = 40.0
offset_bottom = 28.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 13 )
text = "SPELLS"
uppercase = true

[node name="Command3" type="Label" parent="VBoxContainer"]
offset_top = 32.0
offset_right = 40.0
offset_bottom = 44.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 13 )
text = "ITEM"
uppercase = true

[node name="Pointer" type="TextureRect" parent="."]
offset_left = 6.45819
offset_top = 8.0
offset_right = 50.0
offset_bottom = 48.0
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Pointer"]
anims/Hover = SubResource( 12 )
